# EvaluateModels

./: .gitignore  ChangeLog.md  GEMINI.md  LICENSE.md  README.md  cache_utils.py  config.py.example  input.txt  main.py  markdown2html.py  pyproject.toml  pytest.ini  run_tests.py  translator_ollama.py
.cursor/rules/: product-goal.mdc
reports-40-2.5-flash/: evaluation_report.html  evaluation_report.md
tests/: README.md  conftest.py  test_cache_utils.py  test_config.py  test_main.py  test_markdown2html.py
