[project]
name = "evaluatemodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "openai>=1.91.0",
    "opencc>=1.1.9",
    "pymdown-extensions>=10.16",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
